examples/rolling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  labels:
    app: demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: demo
