examples/rolling/rolling-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/mirror-target: http://bluegreen-demo-preview.demo.svc.cluster.local$request_uri
spec:
  rules:
  - host: rolling.dev.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-svc
          servicePort: 80
